tests/ui/traits/non_lifetime_binders/nested-apit-mentioning-outer-bound-var.stderr
error: `impl Trait` can only mention type parameters from an fn or impl
  --> $DIR/nested-apit-mentioning-outer-bound-var.rs:7:52
   |
LL | fn uwu(_: impl for<T> Trait<(), Assoc = impl Trait<T>>) {}
   |                    - type parameter declared here  ^

error: aborting due to 1 previous error

